# vcpkg-registry

./: .eleventy.js  .gitignore  .gitmodules  CONTRIBUTING.md  HUGO_EXPERIMENT.md  README.md  azure-pipelines.yml  mkdocs.yml  package-lock.json  package.json  pull_request_template.md  requirements.txt
.circleci/: config.yml  port-android.txt  port-linux.txt  port-setup.txt  port-uwp.txt  port-windows.txt
.github/: CODEOWNERS  copilot-instructions.md  copilot-setup-steps.yaml  copilot-setup-steps.yml  dependabot.yml  label-configuration.yml  pull_request_template.md  readme.md
azure/: jobs-android.yml  jobs-arm-osx.yml  jobs-arm-windows.yml  jobs-ios-simulator.yml  jobs-ios.yml  jobs-linux.yml  jobs-normal-port.yml  jobs-osx.yml  jobs-python3-port.yml  jobs-python3.yml  jobs-uwp-port.yml  jobs-uwp.yml  jobs-windows.yml  run-vcpkg-with-overlay.yml  run-with-overlay-triplet.yml  steps-osx.yml  steps-publish-logs.yml
docs/: .gitignore  2025-11-prompt_designs.md  2025-12 markdown-ssg-research.md  2025-12 plan-astro-starlight.md  2025-12 plan-docusaurus.md  2025-12 plan-eleventy.md  2025-12 plan-hugo.md  2025-12 plan-vitepress.md  ELEVENTY-README.md  TODO.md  VITEPRESS-SUMMARY.md  copilot-chat-tools-reference.md  feature-binarycaching.md  feature-manifest.md  feature-registry.md  guide-create-port-build.md  guide-create-port-download.md  guide-create-port.md  guide-new-port-build.md  guide-new-port-download.md  guide-new-port.md  guide-troubleshooting.md  guide-update-port-patches.md  guide-update-port-versioning.md  guide-update-port.md  index.md  (+13 more)
tests/: CMakeLists.txt
(+680 files in other folders)
